Health connect 步數、卡路里ok ，三星尚未確認